Update readme and english/portuguese translations (#139)

--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -3,23 +3,25 @@
     <string name="module_description">Android 9-16 core patch</string>
     <string name="corepatch">Esta versão é apenas para Android 9-16.\nPor favor, use a versão mais recente do LSPosed.</string>
     <string name="downgr">Permitir downgrade</string>
-    <string name="downgr_summary">Permite downgrade de apps</string>
+    <string name="downgr_summary">Permite o downgrade de apps</string>
     <string name="authcreak">Desativar verificação de integridade</string>
-    <string name="authcreak_summary">Permite instalar apps após modificar o arquivo no apk (ignorar erro de integridade inválido)</string>
+    <string name="authcreak_summary">Permite instalar apps após modificar um arquivo no APK (ignore o erro de integridade inválido)</string>
     <string name="digestCreak">Desativar comparação de assinaturas</string>
     <string name="digestCreak_summary">Permite a reinstalação do app com assinaturas diferentes</string>
+    <string name="exactSigCheck">Desativar correspondência exata de assinatura</string>
+    <string name="exactSigCheck_summary">Desativa a correspondência exata de assinaturas entre APKs, permitindo instalações com cada divisão do APK tendo uma assinatura diferente. Ative apenas quando for realmente necessário!</string>
     <string name="UsePreSig">Usar assinaturas instaladas</string>
-    <string name="UsePreSig_summary">Sempre use assinaturas de apps já instalados durante a instalação.\n Isso é extremamente <b>perigoso</b>.\n Ative apenas quando for realmente necessário!</string>
+    <string name="UsePreSig_summary">Sempre use assinaturas de apps já instalados durante a instalação.\nIsso é extremamente <b>perigoso</b>.\nAtive apenas quando for realmente necessário!</string>
     <string name="settings">Configurações</string>
     <string name="ignore">Ignorar</string>
     <string name="config_error">Falha na inicialização da configuração</string>
-    <string name="not_supported">Parece que você está usando uma versão desatualizada do LSPosed ou o LSPosed não está ativado. Atualize o LSPosed ou tente novamente após a ativação.</string>
-    <string name="bypassBlock">Ignorar bloqueio</string>
-    <string name="bypassBlock_summary">Ignore a lista de bloqueio em alguns dispositivos como Nothing Phone</string>
-    <string name="miui_usepresig_warn">Usar assinaturas instaladas não funcionará na MIUI porque sua estrutura muda muito.\nNão temos tempo para acompanhar o caso.</string>
-    <string name="usepresig_warn">!! Qualquer apk pode substituir o instalado !!\nTenha cuidado ao instalar apk desconhecido.</string>
+    <string name="not_supported">Parece que você está usando uma versão desatualizada do LSPosed ou o LSPosed não está ativado. Atualize o LSPosed ou tente novamente após ativá-lo.</string>
+    <string name="bypassBlock">Ignorar bloqueio</string>
+    <string name="bypassBlock_summary">Ignore a lista de bloqueio em alguns dispositivos, como o Nothing Phone.</string>
+    <string name="miui_usepresig_warn">Usar assinaturas instaladas não funciona na HyperOS, pois sua estrutura muda muito.\nNão temos tempo para implementar o suporte.</string>
+    <string name="usepresig_warn">!! Qualquer APK pode substituir o instalado !!\nTenha cuidado ao instalar arquivos APK de fontes desconhecidas.</string>
     <string name="shared_user_title">Ignorar verificação de usuário compartilhado</string>
-    <string name="shared_user_summary">Permite instalar apps com assinaturas diferentes do usuário compartilhado (<b>\'Desativar comparação de assinaturas\' também deve estar ativado</b>)</string>
+    <string name="shared_user_summary">Permite instalar apps com assinaturas diferentes do usuário compartilhado (<b>\"Desativar comparação de assinaturas\" também deve estar ativado</b>).</string>
     <string name="disable_verification_agent_title">Desativar agente de verificação de pacotes</string>
     <string name="disable_verification_agent_summary">Ex.: Google Play Protect</string>
 </resources>
