--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,27 +1,27 @@
 <resources>
     <string name="app_name">Core Patch</string>
     <string name="module_description">Android 9-16 core patch</string>
-    <string name="corepatch">This version is for Android 9-16 only.\nPlease use the latest version of the LSPosed.</string>
+    <string name="corepatch">This version is only for Android 9-16.\nPlease use the latest version of LSPosed.</string>
     <string name="downgr">Allow downgrade</string>
-    <string name="downgr_summary">Allow downgrade applications.</string>
+    <string name="downgr_summary">Allow downgrade apps</string>
     <string name="authcreak">Disable digest verify</string>
-    <string name="authcreak_summary">Allows install apps after modify file in apk (ignore invalid digest error).</string>
-    <string name="digestCreak">Disable compare signatures</string>
-    <string name="digestCreak_summary">Allow re-install app with different signatures.</string>
+    <string name="authcreak_summary">Allows installing apps after modifying a file in the APK (ignores invalid digest error)</string>
+    <string name="digestCreak">Disable signature comparison</string>
+    <string name="digestCreak_summary">Allow reinstalling apps with different signatures</string>
     <string name="exactSigCheck">Disable exact signature match</string>
-    <string name="exactSigCheck_summary">Disables exact signature match between apks, allowing installs with each apk split having a different signature. Only enable when really needed!</string>
+    <string name="exactSigCheck_summary">Disables the exact signature match between APKs, allowing installations where each APK split has a different signature. Enable only when needed!</string>
     <string name="UsePreSig">Use installed signatures</string>
-    <string name="UsePreSig_summary">Always use signatures from already installed apps when installing.\n This is extremely <b>dangerous</b>.\n Only enable when really needed!</string>
+    <string name="UsePreSig_summary">Always use the signatures of already installed apps during installation.\nThis is extremely <b>dangerous</b>.\nEnable only when absolutely necessary!</string>
     <string name="settings">Settings</string>
     <string name="ignore">Ignore</string>
     <string name="config_error">Configuration initialization failed</string>
-    <string name="not_supported">It seems that you are using an out dated version of LSPosed or LSPosed is not activated, please update LSPosed or try again after activated.</string>
+    <string name="not_supported">It seems you\'re using an outdated version of LSPosed, or LSPosed isn\'t enabled. Please update LSPosed or try again after enabling it.</string>
     <string name="bypassBlock">Bypass block</string>
-    <string name="bypassBlock_summary">Bypass blocklist in some devices like Nothing Phone</string>
-    <string name="miui_usepresig_warn">UsePreSig won\'t work on MiUI because its framework changes too much.\nWe don\'t have time to track the case.</string>
-    <string name="usepresig_warn">!! Any apk can override the installed one !!\nBe carefully when installing unknown apk</string>
+    <string name="bypassBlock_summary">Bypass the installation blocklist on some devices, like the Nothing Phone.</string>
+    <string name="miui_usepresig_warn">Use installed signatures won\'t work on HyperOS because its framework changes too much.\nWe don\'t have time to implement support.</string>
+    <string name="usepresig_warn">!! Any APK can overwrite the installed app !!\nBe careful when installing APKs from unknown sources.</string>
     <string name="shared_user_title">Bypass shared user verify</string>
-    <string name="shared_user_summary">Allow install app with signature differ from its shared user (<b>\'Disable compare signatures\' must be enabled too</b>)</string>
-    <string name="disable_verification_agent_title">Disable Package Verification Agent</string>
-    <string name="disable_verification_agent_summary">e.g. Google Play Protection</string>
+    <string name="shared_user_summary">Allows installing apps with a signature different from their shared user (<b>\"Disable signature comparison\" must also be enabled</b>).</string>
+    <string name="disable_verification_agent_title">Disable package verification agent</string>
+    <string name="disable_verification_agent_summary">e.g. Google Play Protect</string>
 </resources>
