Update Greek Translation (#140)

--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -5,21 +5,23 @@
     <string name="downgr">Επιτρεπόμενη υποβάθμιση</string>
     <string name="downgr_summary">Επιτρέπει την υποβάθμιση εφαρμογών.</string>
     <string name="authcreak">Απενεργοποίηση επαλήθευσης σύνοψης</string>
-    <string name="authcreak_summary">Επιτρέπει την εγκατάσταση εφαρμογών μετά την τροποποίηση του αρχείου στο apk (αγνοήστε το μη έγκυρο σφάλμα σύνοψης).</string>
+    <string name="authcreak_summary">Επιτρέπει την εγκατάσταση εφαρμογών μετά την τροποποίηση ενός αρχείου στο APK (αγνοεί το σφάλμα μη έγκυρης σύνοψης).</string>
     <string name="digestCreak">Απενεργοποίηση σύγκρισης υπογραφών</string>
-    <string name="digestCreak_summary">Επιτρέπει την επανεγκατάσταση εφαρμογής με διαφορετικές υπογραφές.</string>
+    <string name="digestCreak_summary">Επιτρέπει την επανεγκατάσταση εφαρμογών με διαφορετικές υπογραφές.</string>
+    <string name="exactSigCheck">Απενεργοποίηση ακριβούς αντιστοίχισης υπογραφής</string>
+    <string name="exactSigCheck_summary">Απενεργοποιεί την ακριβή αντιστοίχιση υπογραφής μεταξύ των APKs, επιτρέποντας εγκαταστάσεις όπου κάθε τμήμα APK έχει διαφορετική υπογραφή. Ενεργοποιήστε μόνο όταν χρειάζεται!</string>
     <string name="UsePreSig">Χρήση εγκατεστημένων υπογραφών</string>
-    <string name="UsePreSig_summary">Να χρησιμοποιείτε πάντα υπογραφές από ήδη εγκατεστημένες εφαρμογές κατά την εγκατάσταση.\n Αυτό είναι εξαιρετικά <b>επικίνδυνο</b>.\n Ενεργοποιήστε μόνο όταν είναι πραγματικά απαραίτητο!</string>
+    <string name="UsePreSig_summary">Χρησιμοποιεί πάντα τις υπογραφές των ήδη εγκατεστημένων εφαρμογών κατά την εγκατάσταση.\nΑυτό είναι εξαιρετικά <b>επικίνδυνο</b>.\nΕνεργοποιήστε μόνο όταν είναι απολύτως απαραίτητο!</string>
     <string name="settings">Ρυθμίσεις</string>
     <string name="ignore">Αγνόηση</string>
-    <string name="config_error">Η αρχικοποίηση της διαμόρφωσης απέτυχε</string>
-    <string name="not_supported">Φαίνεται ότι χρησιμοποιείτε μια παλιά έκδοση του LSPosed ή το LSPosed δεν είναι ενεργοποιημένο. Ενημερώστε το LSPosed ή προσπαθήστε ξανά μετά την ενεργοποίηση.</string>
+    <string name="config_error">Αποτυχία αρχικοποίησης διαμόρφωσης</string>
+    <string name="not_supported">Φαίνεται ότι χρησιμοποιείτε μια παλιά έκδοση του LSPosed ή το LSPosed δεν είναι ενεργοποιημένο. Ενημερώστε το LSPosed ή δοκιμάστε ξανά αφού το ενεργοποιήσετε.</string>
     <string name="bypassBlock">Παράκαμψη μπλοκ</string>
-    <string name="bypassBlock_summary">Παράκαμψη λίστας αποκλεισμού σε ορισμένες συσκευές όπως το Nothing Phone</string>
-    <string name="miui_usepresig_warn">Το Χρήση εγκατεστημένων υπογραφών δεν θα λειτουργήσει στο MiUI επειδή το framework του αλλάζει πάρα πολύ.\nΔεν έχουμε χρόνο να παρακολουθήσουμε την υπόθεση.</string>
-    <string name="usepresig_warn">!! Οποιοδήποτε apk μπορεί να αντικαταστήσει το εγκατεστημένο !!\nΝα είστε προσεκτικοί κατά την εγκατάσταση άγνωστου apk</string>
+    <string name="bypassBlock_summary">Παράκαμψη λίστας αποκλεισμού εγκατάστασης σε ορισμένες συσκευές, όπως το Nothing Phone.</string>
+    <string name="miui_usepresig_warn">Η χρήση εγκατεστημένων υπογραφών δεν θα λειτουργήσει στο HyperOS επειδή το πλαίσιο του αλλάζει πάρα πολύ.\nΔεν έχουμε χρόνο να εφαρμόσουμε υποστήριξη.</string>
+    <string name="usepresig_warn">!! Οποιοδήποτε APK μπορεί να αντικαταστήσει την εγκατεστημένη εφαρμογή !!\nΝα είστε προσεκτικοί κατά την εγκατάσταση APKs από άγνωστες πηγές.</string>
     <string name="shared_user_title">Παράκαμψη επαλήθευσης κοινόχρηστου χρήστη</string>
-    <string name="shared_user_summary">Επιτρέπεται η εγκατάσταση εφαρμογής με υπογραφή διαφορετική από τον κοινόχρηστο χρήστη της (<b>πρέπει επίσης να ενεργοποιηθεί η επιλογή \'Απενεργοποίηση σύγκρισης υπογραφών\'</b>)</string>
-    <string name="disable_verification_agent_title">Απενεργοποίηση Παράγοντα Επαλήθευσης Πακέτου</string>
-    <string name="disable_verification_agent_summary">π.χ. Προστασία Google Play</string>
+    <string name="shared_user_summary">Επιτρέπει την εγκατάσταση εφαρμογών με διαφορετική υπογραφή από τον κοινόχρηστο χρήστη τους (<b>πρέπει επίσης να είναι ενεργοποιημένη η \'Απενεργοποίηση σύγκρισης υπογραφών\'</b>).</string>
+    <string name="disable_verification_agent_title">Απενεργοποίηση παράγοντα επαλήθευσης πακέτου</string>
+    <string name="disable_verification_agent_summary">π.χ. Google Play Protect</string>
 </resources>
